--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+    background-color: #171717;
 }
 .flex-xy-center {
     display: flex;
@@ -17,7 +18,7 @@ body {
     position: relative;
     height: 80vh;
     width: 96vw;
-    background-color: aquamarine;
+    background-color: transparent;
     margin: 1rem;
     display: flex;
     overflow: auto;
@@ -27,18 +28,39 @@ body {
 #controller-bar {
     height: 18vh;
     width: 96vw;
-    background-color: bisque;
+    background-color: #1ca0ff;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 
 .bar {
     display: flex;
-    background-color: coral;
+    background-color: #3ebd58;
     min-width: 5px;
     flex-grow: 1;
+    border: 0.5px solid #171717;
 }
 
 .debug-btn {
     position: absolute;
     top: 1rem;
+    border: none;
+    background-color: #1ca0ff;
+    font-size: large;
+    border-radius: 2px;
+    padding: 8px;
+}
+.debug-btn:hover {
+    color: white;
+}
+
+#legend {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: #e87dcc;
+    display: flex;
+    flex-direction: column;
+
 }
